# BAdam

./: .gitignore  LICENSE.txt  block_optim.py  readme.md  requirements.txt  sample_ds_zero3.json  setup.cfg
llama-alpaca/src/llmtuner/dsets/: utils.py
llama-alpaca/src/llmtuner/extras/: misc.py
llama-alpaca/src/llmtuner/hparams/: finetuning_args.py
llama-alpaca/src/llmtuner/tuner/core/: loader.py  trainer.py  utils.py
llama-alpaca/src/llmtuner/tuner/dpo/: collator.py  trainer.py
llama-alpaca/src/llmtuner/tuner/sft/: block_optim.py  trainer.py  workflow.py
roberta-superglue/: badam_ft.py  download_bash.sh  test_module.py
roberta-superglue/content/exp/tasks/configs/: boolq_config.json  copa_config.json  mrpc_config.json  multirc_config.json  rte_config.json  wic_config.json  wsc_config.json
roberta-superglue/content/exp/tasks/data/boolq/: test.jsonl  val.jsonl
roberta-superglue/content/exp/tasks/data/copa/: test.jsonl  train.jsonl  val.jsonl
roberta-superglue/content/exp/tasks/data/mrpc/: test.jsonl  train.jsonl  val.jsonl
roberta-superglue/jiant/proj/main/: metarunner.py  runner.py  runscript.py  tokenize_and_cache.py
roberta-superglue/jiant/proj/main/components/: evaluate.py
roberta-superglue/jiant/proj/main/modeling/: model_setup.py
roberta-superglue/jiant/proj/simple/: runscript.py
roberta-superglue/jiant/shared/: model_setup.py  runner copy.py  runner.py
roberta-superglue/jiant/tasks/lib/: copa.py
roberta-superglue/jiant/utils/: tokenization_normalization.py
src/badam/: __init__.py  block_optim.py  utils.py
(+8 files in other folders)
