[metadata]
name = badam
version = 1.0.1
author = Qijun Luo
author_email = qijunluo@link.cuhk.edu.cn
description = Package which implements the algorithm proposed by "BAdam: A Memory Efficient Full Parameter Training Method for Large Language Models".
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/Ledzy/BAdam
project_urls =
    Bug Tracker = https://github.com/Ledzy/BAdam/issues
    Source Code = https://github.com/Ledzy/BAdam
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src